--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -4,7 +4,8 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/inter-v13-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-regular.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* inter-600 - latin */
 @font-face {
@@ -12,7 +13,8 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/inter-v13-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-600.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* inter-700 - latin */
 @font-face {
@@ -20,7 +22,8 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/inter-v13-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-700.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* inter-900 - latin */
 @font-face {
@@ -28,7 +31,8 @@
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/inter-v13-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-900.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* jetbrains-mono-regular - latin */
@@ -37,7 +41,8 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/jetbrains-mono-v18-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-regular.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* jetbrains-mono-italic - latin */
 @font-face {
@@ -45,7 +50,8 @@
   font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 400;
-  src: url("../fonts/jetbrains-mono-v18-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* jetbrains-mono-600 - latin */
 @font-face {
@@ -53,5 +59,6 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/jetbrains-mono-v18-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-600.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
