--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,18 +19,66 @@
     />
     <link rel="canonical" href="{{.Canonical}}" />
 
+    <!-- #region Preload Fonts -->
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-600.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-700.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/inter-v13-latin-900.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-600.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-italic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/fonts/jetbrains-mono-v18-latin-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <!-- #endregion -->
+
     {{if .IsProduction}}
     <link
       rel="stylesheet"
       href="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/app.min.css"
     />
     {{else}}
-    <link
-      rel="stylesheet"
-      href="/styles/app.css"
-    />
-    {{end}}
-    {{if .IsProduction}}
+    <link rel="stylesheet" href="/styles/app.css" />
+    {{end}} {{if .IsProduction}}
     <script
       type="module"
       src="https://res.cloudinary.com/db8cfpaih/raw/upload/v1/assets/app.min.js"
