--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,8 +52,10 @@ import { Image } from "astro:assets";
     id="skills"
     class="h-screen bg-gray-100 -mx-6 sticky top-0 px-6 pt-20"
   >
-    <RevealHeading client:visible className="text-9xl"
-      >My Beloved Tech Stacks</RevealHeading
-    >
+    <div class="space-y-12">
+      <RevealHeading client:visible className="text-9xl"
+        >My Beloved Tech Stacks</RevealHeading
+      >
+    </div>
   </section>
 </SiteLayout>
