--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ExternalLinkIcon from "@/components/icons/ExternalLinkIcon.astro";
 import { SelectedWorksHeading } from "@/components/pages/home/SelectedWorksHeading";
 import { Tagline } from "@/components/pages/home/Tagline";
 import { RevealHeading } from "@/components/ui/RevealHeading";
@@ -6,41 +7,40 @@ import SiteLayout from "@/layouts/SiteLayout.astro";
 import { PROJECTS } from "@/libs/config";
 import { cn } from "@/libs/utils";
 import { Image } from "astro:assets";
+import { getCollection } from "astro:content";
+
+const posts = await getCollection("blog");
 ---
 
 <SiteLayout title="Home">
-  <section id="hero" class="flex flex-col h-[calc(100vh-5rem)] sticky top-20">
-    <div class="flex flex-col h-full">
-      <Tagline client:load />
-    </div>
+  <section id="hero" class="flex flex-col justify-center pb-32 py-12">
+    <Tagline client:load className="text-6xl lg:text-10xl" />
   </section>
-  <section
-    id="works"
-    class="h-screen bg-stone-300 -mx-6 sticky top-0 px-6 pt-20"
-  >
+  <section id="works" class="bg-stone-300 -mx-6 px-4 md:px-6 py-20">
     <div class="space-y-12">
-      <SelectedWorksHeading client:visible />
+      <SelectedWorksHeading client:visible className="text-6xl lg:text-10xl" />
       <div>
         {
           PROJECTS.map((project, index) => (
             <div
               class={cn(
-                "grid grid-cols-[1.5fr_0.5fr_1fr_1fr] items-center gap-12 border-b border-gray-900 h-32 group relative",
+                "grid grid-cols-1 lg:grid-cols-[1.5fr_0.5fr_1fr_1fr] items-center gap-4 lg:gap-12 border-b border-gray-900 py-6 lg:h-32 group relative",
                 {
                   "border-t": index === 0,
-                }
+                },
               )}
             >
-              <h1 class="text-3xl">{project.name}</h1>
-              <p class="text-2xl italic">{project.year}</p>
-              <p class="text-2xl">{project.role}</p>
-              <p class="text-2xl">{project.stacks.join(", ")}</p>
+              <h1 class="text-2xl lg:text-3xl">{project.name}</h1>
+              <p class="text-xl lg:text-2xl">{project.year}</p>
+              <p class="text-xl lg:text-2xl">{project.role}</p>
+              <p class="text-xl lg:text-2xl">{project.stacks.join(", ")}</p>
               <Image
                 src={`https://res.cloudinary.com/db8cfpaih/image/upload/f_avif,q_50,w_240,h_180/images/projects/${project.image}`}
                 alt={`${project.name} Website`}
                 width={240}
                 height={180}
-                class="absolute right-0 rounded-lg opacity-0 invisible group-hover:opacity-100 duration-300 group-hover:visible translate-y-10 group-hover:translate-y-0"
+                class="absolute right-0 rounded-lg opacity-0 invisible group-hover:opacity-100 duration-300 group-hover:visible translate-y-10 group-hover:translate-y-0 hidden lg:block"
+                aria-haspopup="true"
               />
             </div>
           ))
@@ -48,14 +48,120 @@ import { Image } from "astro:assets";
       </div>
     </div>
   </section>
-  <section
-    id="skills"
-    class="h-screen bg-gray-100 -mx-6 sticky top-0 px-6 pt-20"
-  >
+  <section id="skills" class="min-h-screen bg-gray-100 -mx-6 px-6 py-20">
     <div class="space-y-12">
-      <RevealHeading client:visible className="text-9xl"
+      <RevealHeading client:visible className="text-6xl lg:text-10xl"
         >My Beloved Tech Stacks</RevealHeading
       >
+
+      <div class="gap-2 grid grid-cols-2 lg:grid-cols-1">
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            React JS
+          </h1>
+          <p class="text-white mt-2">
+            The king of components. Making my UI so interactive
+          </p>
+        </div>
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            Next JS
+          </h1>
+          <p class="text-white mt-2">
+            My Swiss Army knife for web development. Ready to slice through
+            server-side rendering like butter
+          </p>
+        </div>
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            TypeScript
+          </h1>
+          <p class="text-white mt-2">
+            Keeping my code type-safe and my sanity intact
+          </p>
+        </div>
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            CSS
+          </h1>
+          <p class="text-white mt-2">
+            The magic wand that transforms my ideas into beautiful designs
+          </p>
+        </div>
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            TanStack
+          </h1>
+          <p class="text-white mt-2">
+            A utilities for making my web development feel much easier and
+            achieve "weekend transquility"
+          </p>
+        </div>
+        <div class="bg-stone-700 p-4">
+          <h1
+            class="text-white text-xl lg:text-4xl font-heading uppercase tracking-wider"
+          >
+            GoLang
+          </h1>
+          <p class="text-white mt-2">
+            The language that i use for my backend development faster before you
+            can say "database optimization"
+          </p>
+        </div>
+        <button
+          class="relative bg-stone-700 p-4 w-full text-left text-white text-xl lg:text-4xl font-heading uppercase tracking-wider flex items-center justify-between group/collection-button overflow-hidden"
+        >
+          <span>All Curated Collection of My Essential Instruments</span>
+          <div
+            class="absolute bg-white inset-0 -translate-y-full group-hover/collection-button:translate-y-0 duration-300 flex flex-col justify-center items-center"
+          >
+            <ExternalLinkIcon class="text-stone-700 size-8" />
+          </div>
+        </button>
+      </div>
+    </div>
+  </section>
+  <section
+    id="writing"
+    class="min-h-screen bg-stone-700 px-6 -mx-6 py-20 gap-12 flex flex-col"
+  >
+    <RevealHeading client:visible className="text-6xl lg:text-10xl text-white"
+      >Latest Articles</RevealHeading
+    >
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-2">
+      {
+        posts.map((post) => (
+          <a
+            href={`/blog/${post.slug}`}
+            class="p-6 border border-stone-200 relative after:bg-white after:absolute after:inset-0 after:-translate-y-full after:duration-300 hover:after:translate-y-0 overflow-y-hidden group/article"
+          >
+            <div class="space-y-2 relative z-10">
+              <p class="text-white text-sm group-hover/article:text-stone-700 duration-300">
+                {post.data.tag} &mdash;{" "}
+                {Intl.DateTimeFormat("en-ID", {
+                  dateStyle: "medium",
+                }).format(post.data.date)}
+              </p>
+              <h1 class="text-white text-4xl font-heading uppercase my-2 group-hover/article:text-stone-700 duration-300">
+                {post.data.title}
+              </h1>
+              <p class="text-white text-balance group-hover/article:text-stone-700 duration-300">
+                {post.data.description}
+              </p>
+            </div>
+          </a>
+        ))
+      }
     </div>
   </section>
 </SiteLayout>
