feat: finalize pages

--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <Head title={title} />
+    <Head title={`${title} — Alfan Jauhari`} />
 
     <script>
       import Lenis from "lenis";
