--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -1,17 +1,17 @@
 ---
-import Head from "@/components/base/Head.astro";
-import "@/styles/fonts.css";
-import "@fontsource/anton/latin.css";
+import Head from '@/components/base/Head.astro'
+import '@/styles/fonts.css'
+import '@fontsource/anton/latin.css'
 
-import { Footer } from "@/components/ui/Footer";
-import { Header } from "@/components/ui/Header";
+import { Footer } from '@/components/ui/Footer'
+import { Header } from '@/components/ui/Header'
 
 interface Props {
-  title: string;
-  description: string;
+  title: string
+  description: string
 }
 
-const { title, description } = Astro.props;
+const { title, description } = Astro.props
 ---
 
 <html lang="en" class="m-0 p-0">
