--- a/src/components/base/Head.astro
+++ b/src/components/base/Head.astro
@@ -18,7 +18,9 @@ const { title, description } = Astro.props;
     import Lenis from "lenis";
     import "lenis/dist/lenis.css";
 
-    const lenis = new Lenis();
+    const lenis = new Lenis({
+      prevent: (node) => node.classList?.contains("prevent-lenis"),
+    });
 
     function raf(time: number) {
       lenis.raf(time);
@@ -50,7 +52,7 @@ const { title, description } = Astro.props;
               "/static/array.js"),
             (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(
               p,
-              r,
+              r
             );
           var u = e;
           for (
@@ -67,7 +69,7 @@ const { title, description } = Astro.props;
               },
               o =
                 "init capture register register_once register_for_session unregister unregister_for_session getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey getNextSurveyStep identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty createPersonProfile opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing debug".split(
-                  " ",
+                  " "
                 ),
               n = 0;
             n < o.length;
