--- a/src/content/blog/_components/web-development-with-progressive-enhancement/FormSandpack.astro
+++ b/src/content/blog/_components/web-development-with-progressive-enhancement/FormSandpack.astro
@@ -1,9 +1,23 @@
 ---
 import Sandpack from "@/components/ui/Sandpack.astro";
+import { join } from "path";
 
-const files = ["/sandpack-files/App.tsx"].map(
-  (path) => import.meta.dirname + path,
+const files = ["/sandpack-files/App.tsx", "/sandpack-files/App.module.css"].map(
+  (path) =>
+    join(
+      process.cwd(),
+      "src",
+      "content",
+      "blog",
+      "_components",
+      "web-development-with-progressive-enhancement",
+      path
+    )
 );
 ---
 
-<Sandpack files={files} />
+<Sandpack files={files} template="react-ts">
+  <div slot="default">
+    <h1>Hello, Sandpack!</h1>
+  </div>
+</Sandpack>
