feat: finalize web-development-with-progressive-enhancement and uses page

--- a/src/content/blog/_components/web-development-with-progressive-enhancement/FormSandpack.astro
+++ b/src/content/blog/_components/web-development-with-progressive-enhancement/FormSandpack.astro
@@ -11,13 +11,9 @@ const files = ["/sandpack-files/App.tsx", "/sandpack-files/App.module.css"].map(
       "blog",
       "_components",
       "web-development-with-progressive-enhancement",
-      path
-    )
+      path,
+    ),
 );
 ---
 
-<Sandpack files={files} template="react-ts">
-  <div slot="default">
-    <h1>Hello, Sandpack!</h1>
-  </div>
-</Sandpack>
+<Sandpack files={files} template="react-ts" />
