--- a/src/components/base/Head.astro
+++ b/src/components/base/Head.astro
@@ -2,15 +2,32 @@
 interface Props {
   title: string;
   description: string;
+  children?: any;
 }
 
 const { title, description } = Astro.props;
+
+const type = Astro.url.pathname.includes("/blog/") ? "blog" : "page";
+const slug = Astro.url.pathname.split("/").pop();
 ---
 
 <head>
   <title>{title}</title>
 
   <meta name="description" content={description} />
+
+  <meta property="og:title" content={title} />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content={Astro.url} />
+
+  {
+    Astro.url.pathname !== "/" && (
+      <meta
+        property="og:image"
+        content={`${Astro.url.origin}/api/og-image/${type}/${slug}.png`}
+      />
+    )
+  }
 
   <link rel="icon" type="image/x-icon" href="/images/favicon.webp" />
 
