fix: error import

--- a/src/components/ui/ArticleCard.astro
+++ b/src/components/ui/ArticleCard.astro
@@ -1,13 +1,13 @@
 ---
 interface Props {
-  slug: string;
-  tag: string;
-  title: string;
-  date: Date;
-  description: string;
+  slug: string
+  tag: string
+  title: string
+  date: Date
+  description: string
 }
 
-const post = Astro.props;
+const post = Astro.props
 ---
 
 <a
