--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
-import ExternalLinkIcon from "@/components/icons/ExternalLinkIcon.astro";
-import { SelectedWorksHeading } from "@/components/pages/home/SelectedWorksHeading";
-import { Tagline } from "@/components/pages/home/Tagline";
-import ArticleCard from "@/components/ui/ArticleCard.astro";
-import { RevealHeading } from "@/components/ui/RevealHeading";
-import SiteLayout from "@/layouts/SiteLayout.astro";
-import { PROJECTS } from "@/libs/config";
-import { cn } from "@/libs/utils";
-import { Image } from "astro:assets";
-import { getCollection } from "astro:content";
+import ExternalLinkIcon from '@/components/icons/ExternalLinkIcon.astro'
+import { SelectedWorksHeading } from '@/components/pages/home/SelectedWorksHeading'
+import { Tagline } from '@/components/pages/home/Tagline'
+import ArticleCard from '@/components/ui/ArticleCard.astro'
+import { RevealHeading } from '@/components/ui/RevealHeading'
+import SiteLayout from '@/layouts/SiteLayout.astro'
+import { PROJECTS } from '@/libs/config'
+import { cn } from '@/libs/utils'
+import { Image } from 'astro:assets'
+import { getCollection } from 'astro:content'
 
-const posts = await getCollection("blog").then((posts) =>
+const posts = await getCollection('blog').then((posts) =>
   posts.sort((a, b) => b.data.date.getTime() - a.data.date.getTime()),
-);
+)
 ---
 
 <SiteLayout
@@ -41,7 +41,7 @@ const posts = await getCollection("blog").then((posts) =>
               <p class="text-xl lg:text-2xl">{project.role}</p>
               <p class="text-xl lg:text-2xl">{project.stacks.join(", ")}</p>
               <Image
-                src={import(`../assets/projects/${project.image}`)}
+                src={project.image}
                 alt={`${project.name} Website`}
                 width={240}
                 height={180}
