--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,22 +1,22 @@
 ---
-import SingleLayout from "@/layouts/SingleLayout.astro";
-import { getCollection, type CollectionEntry } from "astro:content";
+import SingleLayout from '@/layouts/SingleLayout.astro'
+import { getCollection, type CollectionEntry } from 'astro:content'
 
 interface Props {
-  entry: CollectionEntry<"pages">;
+  entry: CollectionEntry<'pages'>
 }
 
 export async function getStaticPaths() {
-  const pageEntries = await getCollection("pages");
+  const pageEntries = await getCollection('pages')
 
   return pageEntries.map((entry) => ({
     params: { slug: entry.slug },
     props: { entry },
-  }));
+  }))
 }
 
-const { entry } = Astro.props;
-const { Content } = await entry.render();
+const { entry } = Astro.props
+const { Content } = await entry.render()
 ---
 
 <SingleLayout {...entry.data}>
