--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ const posts = await getCollection("blog").then((posts) =>
           </p>
         </div>
         <a
-          class="relative bg-stone-700 p-4 w-full text-left text-white text-xl lg:text-4xl font-heading uppercase tracking-wider flex items-center justify-between group/collection-button overflow-hidden"
+          class="relative bg-stone-700 p-4 w-full max-md:col-span-2 text-left text-white text-xl lg:text-4xl font-heading uppercase tracking-wider flex items-center justify-between group/collection-button overflow-hidden"
           href="/uses"
         >
           <span>All Curated Collection of My Essential Instruments</span>
