--- a/src/layouts/SingleLayout.astro
+++ b/src/layouts/SingleLayout.astro
@@ -1,22 +1,20 @@
 ---
-import SiteLayout from './SiteLayout.astro'
-import { getSandpackCssText } from '@codesandbox/sandpack-react'
+import SiteLayout from "./SiteLayout.astro";
+import { getSandpackCssText } from "@codesandbox/sandpack-react";
 
 interface Props {
-  title: string
-  description: string
-  date?: Date
-  tag?: string
+  title: string;
+  description: string;
+  date?: Date;
+  tag?: string;
 }
 
-const { title, description, date, tag } = Astro.props
+const { title, description, date, tag } = Astro.props;
 ---
 
 <SiteLayout title={title} description={description}>
   <style set:html={getSandpackCssText()} id="sandpack"></style>
-  <div
-    class="space-y-12 py-20 flex flex-col items-center max-w-screen-lg mx-auto"
-  >
+  <div class="py-20 flex flex-col items-center max-w-screen-lg mx-auto">
     {
       (tag || date) && (
         <div class="flex items-center gap-2">
@@ -35,9 +33,9 @@ const { title, description, date, tag } = Astro.props
         </div>
       )
     }
-    <div class="space-y-4 w-full border-b border-b-stone-300 pb-4">
+    <div class="mt-4 space-y-4 w-full border-b border-b-stone-300 pb-4">
       <h1
-        class="font-heading text-7xl leading-tight text-stone-700 text-center"
+        class="font-heading text-5xl lg:text-7xl !leading-tight text-stone-700 text-center"
       >
         {title}
       </h1>
@@ -45,7 +43,7 @@ const { title, description, date, tag } = Astro.props
     </div>
 
     <article
-      class="mx-auto max-w-screen-lg prose prose-stone prose-pre:[tab-size:2] prose-a:decoration-dotted"
+      class="mx-auto w-full max-w-screen-lg prose prose-stone prose-pre:[tab-size:2] prose-a:decoration-dotted mt-12"
     >
       <slot />
     </article>
